--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "caffe-enet"]
 	path = caffe-enet
-	url = https://github.com/TimoSaemann/caffe-enet.git
+	url = https://github.com/ed2k/caffe-enet.git
